[tool.poetry]
authors = ["Gabe Joseph <gjoseph92@gmail.com>"]
description = "Assign tasks to pools of workers in dask"
license = "MIT"
name = "dask-worker-pools"
readme = "README.md"
repository = "https://github.com/gjoseph92/dask-worker-pools"
version = "0.1.0"

[tool.poetry.dependencies]
dask = "^2022.2.1"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
ipython = "^8.1.1"
pytest = "^7.0.1"
pyright = "^1.1.228"
numpy = "^1.22.3"
graphviz = "^0.19.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88
